# remote_controller

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  design.py  docker-compose-windows.yml  docker-compose.yml  install-ros.sh  install.sh  package.xml  run.sh  runcontainer.sh  runwindows.ps1  setup.py
launch/: controller.launch
nodes/: controller  remote_controller
src/: design.ui  design_1.ui
src/remote_controller/: design.py  design.ui  design5.py  heading_manipulations.py  test-ui.py
